updating requirements and python version for embeddings

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,10 @@
 # Docker Environment Configuration
 # Set to 'development' for hot reloading, 'production' for optimized builds
 
-NODE_ENV=development
-NEXT_PUBLIC_API_URL=http://localhost:3001/api
-NEXT_PUBLIC_API_HOST=localhost
-NEXT_PUBLIC_API_PORT=3001
+NODE_ENV=production
+
+# # India
+NEXT_PUBLIC_API_URL='https://redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app/api'
+API_HOST='redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app'
+NEXT_PUBLIC_API_HOST='redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app'
+NEXT_PUBLIC_API_PORT=''
