default env pointing to local

--- a/frontend/.env.docker
+++ b/frontend/.env.docker
@@ -3,6 +3,12 @@
 
 NODE_ENV=production
 
+# Local
+NEXT_PUBLIC_API_URL='http://localhost:3001/api'
+API_HOST='http://localhost:3001'
+NEXT_PUBLIC_API_HOST='http://localhost:3001'
+NEXT_PUBLIC_API_PORT=''
+
 # # India
 # NEXT_PUBLIC_API_URL='https://redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app/api'
 # API_HOST='redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app'
@@ -10,7 +16,7 @@ NODE_ENV=production
 # NEXT_PUBLIC_API_PORT=''
 
 # London
-NEXT_PUBLIC_API_URL='https://redis-vectorsets-face-similarity-backend-371338919648.europe-west2.run.app/api'
-API_HOST='redis-vectorsets-face-similarity-backend-371338919648.europe-west2.run.app'
-NEXT_PUBLIC_API_HOST='redis-vectorsets-face-similarity-backend-371338919648.europe-west2.run.app'
-NEXT_PUBLIC_API_PORT=''
+# NEXT_PUBLIC_API_URL='https://redis-vectorsets-face-similarity-backend-371338919648.europe-west2.run.app/api'
+# API_HOST='redis-vectorsets-face-similarity-backend-371338919648.europe-west2.run.app'
+# NEXT_PUBLIC_API_HOST='redis-vectorsets-face-similarity-backend-371338919648.europe-west2.run.app'
+# NEXT_PUBLIC_API_PORT=''
