--- a/frontend/.env
+++ b/frontend/.env
@@ -3,8 +3,14 @@
 
 NODE_ENV=production
 
-# # India
-NEXT_PUBLIC_API_URL='https://redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app/api'
-API_HOST='redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app'
-NEXT_PUBLIC_API_HOST='redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app'
+# Local
+NEXT_PUBLIC_API_URL='http://localhost:3001/api'
+API_HOST='http://localhost:3001'
+NEXT_PUBLIC_API_HOST='http://localhost:3001'
 NEXT_PUBLIC_API_PORT=''
+
+# # India
+# NEXT_PUBLIC_API_URL='https://redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app/api'
+# API_HOST='redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app'
+# NEXT_PUBLIC_API_HOST='redis-vectorsets-face-similarity-backend-371338919648.asia-south1.run.app'
+# NEXT_PUBLIC_API_PORT=''
